updated copyright and index page

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                         </div>
                     </div>
                 </nav>
-            </div>
-            <div class = "sectiondivider"></div>
+            </div>9C6B0
+            <div class = "sectiondivider2"><i>Please note this is the static page example. To view all code, visit <b><u><a style="color:#75675E;" href="https://github.com/jenivy06/journal-my-journey" target="_blank">my project on Github.</b></u></a></i></div>
             <div class="parallax-container">
                     <div class="parallax">
                         <img src="images/treesandroad.jpg">
