--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         </div>
                     </div>
                 </nav>
-            </div>9C6B0
+            </div>
             <div class = "sectiondivider2"><i>Please note this is the static page example. To view all code, visit <b><u><a style="color:#75675E;" href="https://github.com/jenivy06/journal-my-journey" target="_blank">my project on Github.</b></u></a></i></div>
             <div class="parallax-container">
                     <div class="parallax">
